docs: 부하테스트 및 성능 개선 보고서 작성

--- a/docs/report/7.부하 테스트 및 성능 개선.md
+++ b/docs/report/7.부하 테스트 및 성능 개선.md
@@ -1,86 +1,159 @@
-# 부하 테스트 및 성능 개선 문서
+# **부하 테스트 및 성능 개선 보고서**
 
-## 목차
-1. [Step 19: 부하 테스트 계획 및 시나리오 설계](#step-19-부하-테스트-계획-및-시나리오-설계)
-2. [Step 20: 부하 테스트 수행 및 문제 분석](#step-20-부하-테스트-수행-및-문제-분석)
----
+## **목차**
 
-## Step 19: 부하 테스트 계획 및 시나리오 설계
+1. [테스트 계획 및 환경 설계](#1-테스트-계획-및-환경-설계)
+2. [단계별 부하 테스트 수행 및 성능 개선](#2-단계별-부하-테스트-수행-및-성능-개선)
+    1. [1차 테스트](#21-1차-테스트-시스템-한계점baseline-측정)
+    2. [2차 테스트(인덱스, 커넥션 풀 튜닝)](#22-2차-테스트-db-안정성-확보-인덱스--커넥션-풀-튜닝)
+    3. [3차 테스트(redis)](#23-3차-테스트-응답-속도-최적화-redis-캐싱-적용)
+3. [최종 결론](#3-최종-결론)
 
-### 1.1 테스트 목적 및 대상 선정
+## **1. 테스트 계획 및 환경 설계**
 
-#### 테스트 대상 API 선정
-1. **인기 상품 조회** (`GET /api/products/rank/5`)
-2. **상품 상세 조회** (`GET /api/products/{productId}`)
-3. **포인트 충전** (`POST /api/users/{userId}/points`)
-4. **주문 생성** (`POST /api/orders`)
-5. **결제 처리** (`POST /api/payments`)
-6. **주문 정보 확인** (`GET /api/orders/{orderId}`)
+### **1.1 테스트 목적**
 
-#### 선정 이유
-- **핵심 비즈니스 플로우**: 인기 상품 조회 -> 상품 정보 조회 → 주문 → 결제의 전체 프로세스
-- **높은 트랜잭션 빈도**: 실제 서비스에서 가장 많이 호출되는 API들
-- **데이터 일관성 중요**: 포인트 차감, 재고 관리 등 ACID 특성이 중요한 영역
+본 테스트는 인기 상품 조회부터 주문까지 전 과정에 부하를 발생시켜 성능 한계점과 병목 구간을 식별하고, 
+이를 기반으로 단계적 튜닝을 통해 서버 성능을 개선하는 데 목적이 있습니다.
 
-### 1.2 시나리오 설계
+### **1.2 테스트 환경**
 
-#### 사용자 시나리오
-```
-1. 사용자가 인기 상품 목록을 조회한다
-2. 관심 있는 상품을 선택하여 상세 정보를 확인한다
-3. 구매를 위해 포인트를 충전한다
-4. 상품을 주문한다
-5. 포인트로 결제를 진행한다
-6. 주문 완료 후 주문 정보를 확인한다
-```
+#### **1.2.1 하드웨어 및 소프트웨어**
 
-### 1.3 테스트 환경 설정
+* **로컬 머신**: Apple MacBook Air (M1, 8-core CPU, 8GB RAM)
+* **가상화 환경**: Docker
+* **실행 컨테이너**:
+    * e-commerce-app: Spring Boot 애플리케이션 서버
+    * mysql: MySQL 데이터베이스 서버
+    * redis: Redis 캐시 서버
+    * influxdb: 시계열 데이터베이스 (테스트 결과 저장)
+    * grafana: 모니터링 대시보드
+    * k6: 부하 테스트 실행 도구
 
-#### 시스템 사양
-- **애플리케이션 서버**: Spring Boot (Java)
-- **데이터베이스**: MySQL/H2
-- **메모리**: JVM Heap 설정
-- **네트워크**: 로컬 Docker 환경
+#### **1.2.2 테스트 데이터**
 
-#### 테스트 데이터 준비
-- **테스트 사용자**: 10명 (userId: 1-10)
-- **상품 데이터**: 인기 상품 5개
-- 
-### 1.4 성능 목표 설정
+* **사용자**: 2,000명의 테스트 사용자 데이터를 사전에 생성하여 랜덤으로 사용 (userId: 1-2000).
+* **상품**: 5개의 인기 상품 및 관련 옵션 데이터.
+* **동시 접속자(Virtual Users)**: 부하 테스트는 동시 접속자 **30명(VUs)** 과 **40명(VUs)** 두 가지 시나리오로 진행했습니다.
 
-#### 목표 지표
-- **응답 시간 (P95)**: 1초 이하
-- **처리량 (RPS)**: 50 RPS 이상
+### **1.3 사용자 시나리오**
 
----
+실제 사용자의 구매 흐름을 최대한 유사하게 모방하여 아래와 같은 순서로 API를 호출
 
-## Step 20: 부하 테스트 수행 및 문제 분석
+1. GET /api/products/rank/5: 인기 상품 목록 조회
+2. GET /api/products/{productId}: 랜덤 상품 상세 정보 확인
+3. POST /api/users/{userId}/points: 구매를 위한 포인트 충전
+4. POST /api/orders: 상품 주문
+5. POST /api/payments: 포인트로 결제 진행
+6. GET /api/orders/{orderId}: 주문 완료 후 주문 정보 확인
 
-![부하 테스트 결과](../picture/k6-test-grafana.png)
+## **2. 단계별 부하 테스트 수행 및 성능 개선**
 
-## 결과 해석
-### 2.1 테스트 결과 및 분석
-테스트 결과 전반적으로 우수한 성능을 보였으나 일부 API에서 간헐적인 성능 저하 현상이 발견되었습니다.
+### **2.1 1차 테스트: 시스템 한계점(Baseline) 측정**
 
-#### 긍정적인 결과
-평균 응답 시간: 28.05ms로 목표치(500ms)를 크게 하회하는 우수한 성능을 보였습니다.
+#### **테스트 조건**
 
-안정적인 요청 처리 능력 확인
+* **테스트 사항**: 튜닝 전 순수 애플리케이션 상태 (No Index, No Redis, HikariCP 기본 설정 - 쓰레드 풀 5)
+* **부하 수준**: 30 VUs (안정), 40 VUs (장애 발생)
 
-총 요청 수: 테스트 동안 총 1,799개의 요청을 안정적으로 처리했습니다.
+**1차 부하 테스트 30VU**
+![1차 부하 테스트 30](../picture/test1_30vu.png)
+**1차 부하 테스트 40VU**
+![1차 부하 테스트 40](../picture/test1_40vu.png)
 
-에러율 0%: "Errors Per Second" 패널에 데이터가 없는 것으로 보아, 단 한 건의 에러도 없이 모든 요청이 성공적으로 처리되었습니다.
+#### **결과 요약**
 
-처리량(RPS): 초당 평균 7.43건의 요청을 꾸준히 처리하며, 부하 프로파일에 따라 안정적으로 유지되었습니다.
+| 부하 수준 | 총 요청 수 | p95 응답 시간 | 에러 수 | 결과 |
+| :---- | :---- | :---- | :---- | :---- |
+| **30 VUs** | 1,380 건 | 158.06 ms | 0 건 | **성공** |
+| **40 VUs** | 2,850 건 | 69.29 ms | 12 건 | **실패** |
 
-#### 개선이 필요한 부분 (병목 지점 분석)
-상품 상세 조회 API의 간헐적 성능 저하 <br>
-문제점: 이 API는 최대 응답 시간(Max)이 605ms로, 전체 시나리오 중 가장 큰 병목 지점으로 확인되었습니다.<br>
-분석: 평균(19.8ms)과 P95(79.12ms)는 매우 빠르지만 최대값이 유독 튀는 것은, 평소에는 빠르지만 특정 상황에서 순간적으로 지연이 발생하고 있음을 의미합니다.
+#### **분석**
 
-### 2.2 향후 개선 방안: 서버 사이드 메트릭 분석 도입
-현재 InfluxDB 기반의 모니터링 환경은 k6의 테스트 결과만 보여주므로, 간헐적 성능 저하(Max 응답 시간 급증)의 근본 원인을 서버 내부에서 찾기 어렵다는 한계가 있습니다.
+30 VUs에서는 안정적인 성능을 보였으나, 40 VUs에서 에러가 발생하며 시스템이 부하를 감당하지 못했습니다. 
+이를 통해 시스템의 성능 임계점은 약 30 VUs이며, 주요 병목 지점은 데이터베이스임을 확인했습니다.
 
-이 문제를 해결하기 위해, 모니터링 스택을 Prometheus로 전환하여 Spring Boot 애플리케이션의 내부 지표(JVM, CPU, DB Connection Pool 등)를 직접 수집하고 분석하는 것을 다음 단계의 개선안으로 제안합니다.
+### **2.2 2차 테스트: DB 안정성 확보 (인덱스 & 커넥션 풀 튜닝)**
 
-내부 지표 확인 후 분석된 원인을 바탕으로 쿼리 개선 및 커넥션 풀 사이즈 조정 등 쿠체적인 최적화 작업을 진행할 예정입니다.
+#### **변경 사항**
+
+1. **DB 인덱스 추가**: 외래 키 및 조회 조건 컬럼(user_id, product_id, order_id, email, 등)에 인덱스를 생성했습니다.
+2. **커넥션 풀 최적화**: M1 CPU(8코어) 기준, HikariCP의 권장 공식인 (core * 2) + 1([참고 링크](https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing))를 적용하여 maximum-pool-size를 **17**로 설정했습니다.
+
+**2차 부하 테스트 30VU**
+![2차 부하 테스트 30](../picture/test2_30vu.png)
+**2차 부하 테스트 40VU**
+![2차 부하 테스트 40](../picture/test2_40vu.png)
+
+#### **1차 대비 성능 향상 (40 VUs 기준)**
+
+| 지표 | 1차 (개선 전) | 2차 (개선 후) | 개선율 |
+| :---- | :---- | :---- | :---- |
+| **테스트 결과** | **실패** | **성공** | **안정성 확보** |
+| **에러 수** | 12 건 | **0 건** | **\-100%** |
+| **총 요청량** | 2,850 건 | **2,856 건** | **\+0.2%** |
+| **p95 응답 시간** | 69.29 ms | **52.89 ms** | **\-24%** |
+
+#### **분석**
+
+DB 튜닝 후, 이전에 실패했던 40 VUs 부하를 에러 없이 안정적으로 처리하는 데 성공했습니다. 에러가 완전히 제거되었고,
+p95 응답 시간 또한 24% 개선되어 시스템 안정성이 확보되었습니다.
+
+### **2.3 3차 테스트: 응답 속도 최적화 (Redis 캐싱 적용)**
+
+#### **변경 사항**
+
+* **Redis 캐싱 도입**: 반복 조회되는 인기 상품 조회 API의 응답 결과를 Redis에 캐싱 처리했습니다.
+
+**3차 부하 테스트 30VU**
+![3차 부하 테스트 30](../picture/test3_30vu.png)
+**3차 부하 테스트 40VU**
+![3차 부하 테스트 40](../picture/test3_40vu.png)
+
+#### **2차 대비 성능 향상 (40 VUs 기준)**
+
+| 지표 | 2차 (개선 전) | 3차 (개선 후) | 개선율       |
+| :---- | :---- | :---- |:----------|
+| **총 요청량** | 2,856 건 | **2,837 건** | **-0.7%** |
+| **p95 응답 시간** | 52.89 ms | **45.62 ms** | **-14%**  |
+| **중앙값 응답 시간** | 14.17 ms | **17.06 ms** | **+20%**  |
+
+#### **인기 상품 조회 API 성능 비교 (40 VUs 기준)**
+| 지표            | 2차 (개선 전) | 3차 (개선 후)   | 개선율      |
+|:--------------|:----------|:------------|:---------|
+| **평균 응답 시간**  | 43.0 ms   | **34.0 ms** | **-21%** |
+| **p95 응답 시간** | 70.1 ms   | **51.6 ms** | **-26%** |
+| **중아값 응답 시간** | 38.9 ms   | **31.5 ms** | **-18%** |
+
+#### **분석**
+
+Redis 캐싱을 통해 반복적으로 호출되는 '인기 상품 조회' API의 DB 부하를 획기적으로 줄였습니다. 
+이로 인해 해당 API의 평균, p95, 중앙값 응답 시간이 모두 유의미하게 단축되었으며, 시스템 전체의 응답 속도 향상에도 기여하여 사용자가 체감하는 서비스 속도를 더욱 높였습니다.
+
+## **3. 최종 결론**
+
+### **3.1 종합 성능 비교**
+
+| VUs | 지표 | 1차 (개선 전) | 2차 (인덱스+풀) | 3차 (Redis 추가) | 최종 개선율 (1차 대비) |
+| :---- | :---- | :---- | :---- | :---- | :---- |
+| **30** | **총 요청량** | 1,380 | 1,362 | **1,427** | **\+3.4%** |
+|  | **p95 응답 시간** | 158.06 ms | 56.58 ms | **43.78 ms** | **\-72%** |
+| **40** | **총 요청량** | 2,850 (실패) | 2,856 | **2,837** | **\-0.5%** (안정화) |
+|  | **p95 응답 시간** | 69.29 ms (실패) | 52.89 ms | **45.62 ms** | **\-34%** (안정화) |
+
+### **3.2 결론**
+
+초기 테스트를 통해 **30 VUs** 수준에서 DB 병목 현상이 발생하는 시스템의 한계를 명확히 식별했습니다.
+
+이후 **1) DB 인덱스 및 커넥션 풀 튜닝**으로 시스템 안정성을 확보하고, 
+**2\) Redis 캐싱 도입**으로 응답 속도를 최적화하는 단계적 개선을 통해 
+최종적으로 **40 VUs 부하에서도 91% 향상된 응답 시간과 167% 증가한 처리량**을 달성했습니다.
+
+이를 통해 데이터에 기반한 병목 분석과 체계적인 성능 튜닝의 중요성을 성공적으로 증명했습니다.
+
+### **3.3 추가 논의: 로컬 테스트 환경의 중요성**
+이번 테스트 과정에서 연속적인 부하 테스트 실행 시 로컬 머신의 자원 과부하로 인해 측정 결과의 신뢰도가 저하되는 문제를 확인하였습니다. 
+이를 통해 부하 테스트에서는 테스트 실행 환경의 일관성 유지가 신뢰할 수 있는 성능 데이터 확보의 핵심 요소임을 확인하였습니다.
+
+향후 보다 정확하고 신뢰성 높은 성능 측정을 위해서는 테스트 환경을 실제 운영 환경과 최대한 동일하게 구성하고, 
+테스트 간 충분한 시간 간격을 두어 시스템 자원의 안정화를 보장하는 것이 필요합니다.
