docs: Update 7.부하 테스트 및 성능 개선.md 오타 수정

--- a/docs/report/7.부하 테스트 및 성능 개선.md
+++ b/docs/report/7.부하 테스트 및 성능 개선.md
@@ -123,7 +123,7 @@ p95 응답 시간 또한 24% 개선되어 시스템 안정성이 확보되었습
 |:--------------|:----------|:------------|:---------|
 | **평균 응답 시간**  | 43.0 ms   | **34.0 ms** | **-21%** |
 | **p95 응답 시간** | 70.1 ms   | **51.6 ms** | **-26%** |
-| **중아값 응답 시간** | 38.9 ms   | **31.5 ms** | **-18%** |
+| **중앙값 응답 시간** | 38.9 ms   | **31.5 ms** | **-18%** |
 
 #### **분석**
 
