--- a/docs/report/7.부하 테스트 및 성능 개선.md
+++ b/docs/report/7.부하 테스트 및 성능 개선.md
@@ -5,8 +5,9 @@
 1. [테스트 계획 및 환경 설계](#1-테스트-계획-및-환경-설계)
 2. [단계별 부하 테스트 수행 및 성능 개선](#2-단계별-부하-테스트-수행-및-성능-개선)
     1. [1차 테스트](#21-1차-테스트-시스템-한계점baseline-측정)
-    2. [2차 테스트(인덱스, 커넥션 풀 튜닝)](#22-2차-테스트-db-안정성-확보-인덱스--커넥션-풀-튜닝)
-    3. [3차 테스트(redis)](#23-3차-테스트-응답-속도-최적화-redis-캐싱-적용)
+    2. [2차 테스트(커넥션 풀)](#22-2차-테스트-db-안정성-확보-커넥션-풀)
+    3. [3차 테스트(redis)](#23-3차-테스트-인기상품-조회-redis-캐싱-적용)
+    4. [4차 테스트(인덱스)](#24-4차-테스트-인덱스-적용)
 3. [최종 결론](#3-최종-결론)
 
 ## **1. 테스트 계획 및 환경 설계**
@@ -34,7 +35,7 @@
 
 * **사용자**: 2,000명의 테스트 사용자 데이터를 사전에 생성하여 랜덤으로 사용 (userId: 1-2000).
 * **상품**: 5개의 인기 상품 및 관련 옵션 데이터.
-* **동시 접속자(Virtual Users)**: 부하 테스트는 동시 접속자 **30명(VUs)** 과 **40명(VUs)** 두 가지 시나리오로 진행했습니다.
+* **동시 접속자(Virtual Users)**: 부하 테스트는 동시 접속자 **30명(VUs)** 과 **40명(VUs)** 두 가지 시나리오로 진행.
 
 ### **1.3 사용자 시나리오**
 
@@ -53,103 +54,151 @@
 
 #### **테스트 조건**
 
-* **테스트 사항**: 튜닝 전 순수 애플리케이션 상태 (No Index, No Redis, HikariCP 기본 설정 - 쓰레드 풀 5)
-* **부하 수준**: 30 VUs (안정), 40 VUs (장애 발생)
+* **테스트 사항**: 튜닝 전 순수 애플리케이션 상태 (No Index, No Redis, HikariCP 기본 설정 - 쓰레드 풀 10)
+* **부하 수준**: 
+  * 30 ~ 40VUs
+  * 총 4분 - 30초 동안 증가, 3분동안 유지, 30초동안 감소
 
-**1차 부하 테스트 30VU**
+##### **1차 부하 테스트 30VU**
 ![1차 부하 테스트 30](../picture/test1_30vu.png)
-**1차 부하 테스트 40VU**
+##### **1차 부하 테스트 40VU**
 ![1차 부하 테스트 40](../picture/test1_40vu.png)
 
 #### **결과 요약**
 
-| 부하 수준 | 총 요청 수 | p95 응답 시간 | 에러 수 | 결과 |
-| :---- | :---- | :---- | :---- | :---- |
-| **30 VUs** | 1,380 건 | 158.06 ms | 0 건 | **성공** |
-| **40 VUs** | 2,850 건 | 69.29 ms | 12 건 | **실패** |
+| 부하 수준 | 총 요청 수  | p95 응답 시간 | 에러 수 | 결과 |
+| :---- |:--------|:----------|:-----| :---- |
+| **30 VUs** | 6,165 건 | 98.95 ms  | 0 건  | **성공** |
+| **40 VUs** | 2,341 건 | 29.46 s   | 53 건  | **실패** |
 
 #### **분석**
 
-30 VUs에서는 안정적인 성능을 보였으나, 40 VUs에서 에러가 발생하며 시스템이 부하를 감당하지 못했습니다. 
-이를 통해 시스템의 성능 임계점은 약 30 VUs이며, 주요 병목 지점은 데이터베이스임을 확인했습니다.
+30 VUs에서는 시스템이 안정적으로 동작했습니다. 요청 처리 성공률이 높았고, 에러는 거의 발생하지 않았습니다.
 
-### **2.2 2차 테스트: DB 안정성 확보 (인덱스 & 커넥션 풀 튜닝)**
+40 VUs에서는 53건의 에러가 발생했습니다. 모니터링 결과, DB 커넥션 풀의 pending thread 수가 40으로 올라가면서 요청이 대기 상태에 들어가 많은 요청이 타임아웃으로 에러가 발생하였습니다.
+
+이를 통해 시스템의 성능 한계점은 약 30~40 VUs로 추정되며, 주요 병목 지점은 데이터베이스 커넥션 풀임을 확인할 수 있습니다.
+
+
+
+### **2.2 2차 테스트: DB 안정성 확보 (커넥션 풀)**
+
+1차 테스트에서 병목 지점이었던 데이터 베이스 커넥션 풀을 증가하여 다시 테스트했습니다.
 
 #### **변경 사항**
 
-1. **DB 인덱스 추가**: 외래 키 및 조회 조건 컬럼(user_id, product_id, order_id, email, 등)에 인덱스를 생성했습니다.
-2. **커넥션 풀 최적화**: M1 CPU(8코어) 기준, HikariCP의 권장 공식인 (core * 2) + 1([참고 링크](https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing))를 적용하여 maximum-pool-size를 **17**로 설정했습니다.
+[//]: # (1. **DB 인덱스 추가**: 외래 키 및 조회 조건 컬럼&#40;user_id, product_id, order_id, email, 등&#41;에 인덱스를 생성했습니다.)
+커넥션 풀 최적화: M1 CPU 기준(로컬 머신 8코어), HikariCP 권장 공식 (core * 2) + 1 을 적용하여 minimum-idle과 maximum-pool-size를 모두 17로 설정했습니다.([참고 링크](https://github.com/brettwooldridge/HikariCP/wiki/About-Pool-Sizing))
 
-**2차 부하 테스트 30VU**
+최소/최대 풀을 동일하게 설정함으로써, 커넥션 생성/소멸 과정에서 발생할 수 있는 불필요한 오버헤드를 제거하고, 커넥션이 줄거나 추가될 때 낭비되는 리소스를 최소화했습니다.
+
+##### **2차 부하 테스트 30VU**
 ![2차 부하 테스트 30](../picture/test2_30vu.png)
-**2차 부하 테스트 40VU**
+##### **2차 부하 테스트 40VU**
 ![2차 부하 테스트 40](../picture/test2_40vu.png)
 
 #### **1차 대비 성능 향상 (40 VUs 기준)**
 
-| 지표 | 1차 (개선 전) | 2차 (개선 후) | 개선율 |
-| :---- | :---- | :---- | :---- |
-| **테스트 결과** | **실패** | **성공** | **안정성 확보** |
-| **에러 수** | 12 건 | **0 건** | **\-100%** |
-| **총 요청량** | 2,850 건 | **2,856 건** | **\+0.2%** |
-| **p95 응답 시간** | 69.29 ms | **52.89 ms** | **\-24%** |
+| 지표 | 1차 (개선 전) | 2차 (개선 후)    | 개선율         |
+| :---- |:----------|:-------------|:------------|
+| **테스트 결과** | **실패**    | **성공**       | **안정성 확보**  |
+| **에러 수** | 53 건      | **0 건**      | **100% 감소** |
+| **p95 응답 시간** | 29.46 s   | **121.70 ms** | **99.6% 감소**   |
 
 #### **분석**
+1차 테스트에서 40 VUs 부하 발생 시 시스템은 거의 마비 상태에 이르렀으며, p95 시간은 29.46초, 53건의 요청이 실패했습니다.
 
-DB 튜닝 후, 이전에 실패했던 40 VUs 부하를 에러 없이 안정적으로 처리하는 데 성공했습니다. 에러가 완전히 제거되었고,
-p95 응답 시간 또한 24% 개선되어 시스템 안정성이 확보되었습니다.
+DB 커넥션 풀을 17로 조정한 이후 시스템은 안정화되었고, 모든 에러가 사라졌으며 p95 응답 시간은 121.70ms로 크게 단축되어 이를 통해 시스템 안정성이 확보했습니다.
 
-### **2.3 3차 테스트: 응답 속도 최적화 (Redis 캐싱 적용)**
+### **2.3 3차 테스트: 인기상품 조회 Redis 캐싱 적용**
 
 #### **변경 사항**
 
-* **Redis 캐싱 도입**: 반복 조회되는 인기 상품 조회 API의 응답 결과를 Redis에 캐싱 처리했습니다.
+* **Redis 캐싱 도입**: p95가 163ms로 가장 느리고 빈번하게 호출되는 인기 상품 목록 조회 API가 DB에 지속적인 부하를 주고 있어 해당 API의 응답 결과에 Redis 캐싱을 도입했습니다.
 
-**3차 부하 테스트 30VU**
-![3차 부하 테스트 30](../picture/test3_30vu.png)
-**3차 부하 테스트 40VU**
+[//]: # (**3차 부하 테스트 30VU**)
+[//]: # (![3차 부하 테스트 30]&#40;../picture/test3_30vu.png&#41;)
+##### **3차 부하 테스트 40VU**
 ![3차 부하 테스트 40](../picture/test3_40vu.png)
 
 #### **2차 대비 성능 향상 (40 VUs 기준)**
 
-| 지표 | 2차 (개선 전) | 3차 (개선 후) | 개선율       |
-| :---- | :---- | :---- |:----------|
-| **총 요청량** | 2,856 건 | **2,837 건** | **-0.7%** |
-| **p95 응답 시간** | 52.89 ms | **45.62 ms** | **-14%**  |
-| **중앙값 응답 시간** | 14.17 ms | **17.06 ms** | **+20%**  |
+| 지표                 | 2차 (Before Redis) | 3차 (After Redis) | 개선율        |
+|:-------------------|:------------------|:-----------------|:-----------|
+| **p95 응답 시간**      | 121.70 ms         | **79.17 ms**     | **35% 감소** |
+| **최대 응답 시간(max)**  | 584.45 ms         | **367.10 ms**    | **37% 감소** |
 
 #### **인기 상품 조회 API 성능 비교 (40 VUs 기준)**
-| 지표            | 2차 (개선 전) | 3차 (개선 후)   | 개선율      |
-|:--------------|:----------|:------------|:---------|
-| **평균 응답 시간**  | 43.0 ms   | **34.0 ms** | **-21%** |
-| **p95 응답 시간** | 70.1 ms   | **51.6 ms** | **-26%** |
-| **중앙값 응답 시간** | 38.9 ms   | **31.5 ms** | **-18%** |
+| 지표                    | 2차 (Before Redis) | 3차 (After Redis) | 개선율        |
+|:----------------------|:------------------|:-----------------|:-----------|
+| **평균 응답 시간(mean)**    | 95.0 ms           | **43.9 ms**      | **54% 감소** |
+| **p95 응답 시간**         | 163 ms            | **92.4 ms**      | **43% 감소** |
+| **중앙값 응답 시간(median)** | 90.0 ms           | **36.0 ms**      | **60% 감소** |
+
 
 #### **분석**
 
-Redis 캐싱을 통해 반복적으로 호출되는 '인기 상품 조회' API의 DB 부하를 획기적으로 줄였습니다. 
-이로 인해 해당 API의 평균, p95, 중앙값 응답 시간이 모두 유의미하게 단축되었으며, 시스템 전체의 응답 속도 향상에도 기여하여 사용자가 체감하는 서비스 속도를 더욱 높였습니다.
+API 성능 향상: 캐싱 적용 후 인기 상품 목록 조회 API의 평균 응답 시간이 54%, 중앙값 응답 시간이 60% 단축되었습니다.
+
+시스템 안정성 개선: 데이터베이스 부하가 감소하여 p95 응답 시간과 최대 응답 시간이 각각 35%, 37% 단축되었으며, 서비스 지연 현상이 감소하였습니다.
+
+확장성 확보: 데이터베이스가 빈번한 읽기 작업에서 해방되어 주문·결제 등 핵심 쓰기 작업에 자원을 집중할 수 있게 되었으며, 향후 트래픽 증가에 대비할 수 있는 기반을 마련하였습니다.
+
+
+### **2.4 4차 테스트: 인덱스 적용**
+
+#### **변경 사항**
+
+* **DB 인덱스 도입**: 상품 상세 조회 API의 쿼리가 풀 테이블 스캔(type: ALL)으로 실행되는 것을 확인하고, 향후 성능 저하를 방지하기 위해 관련 컬럼에 `product_id`인덱스를 추가하여 쿼리 실행 계획을 최적화했습니다. 
+
+##### **4차 부하 테스트 40VU**
+![4차 부하 테스트 40](../picture/test4_40vu.png)
+
+##### **EXPLAIN 전후 비교**
+![index before](../picture/index_before.png)
+![index after](../picture/index_after.png)
+
+#### **3차 대비 성능 향상 (40 VUs 기준)**
+| 지표 | 3차 (Before Index) | 4차 (After Index) |  개선율  |
+|:---|:---:|:----------------:|:-----:|
+| 최대 응답 시간 (max) | 253 ms |      165 ms      | 35%감소 |
+| p95 응답 시간 | 40.7 ms |     39.9 ms      | 2%감소  |
+| 평균 응답 시간 (mean)| 16.0 ms |     15.3 ms      | 4%감소  |
+
+#### **분석**
+EXPLAIN 기반 분석을 통해 풀 테이블 스캔으로 발생하던 비효율을 확인하고, 관련 컬럼에 인덱스를 추가했습니다. 
+그 결과, 최대 응답 시간은 35% 단축되어 간헐적 DB 락 경합 문제가 해소되었으며, 
+평균 및 p95 응답 시간도 소폭 개선되어 전반적인 사용자 경험이 향상되었습니다.
+
 
 ## **3. 최종 결론**
 
 ### **3.1 종합 성능 비교**
 
-| VUs | 지표 | 1차 (개선 전) | 2차 (인덱스+풀) | 3차 (Redis 추가) | 최종 개선율 (1차 대비) |
-| :---- | :---- | :---- | :---- | :---- | :---- |
-| **30** | **총 요청량** | 1,380 | 1,362 | **1,427** | **\+3.4%** |
-|  | **p95 응답 시간** | 158.06 ms | 56.58 ms | **43.78 ms** | **\-72%** |
-| **40** | **총 요청량** | 2,850 (실패) | 2,856 | **2,837** | **\-0.5%** (안정화) |
-|  | **p95 응답 시간** | 69.29 ms (실패) | 52.89 ms | **45.62 ms** | **\-34%** (안정화) |
+### **종합 성능 비교 (40 VUs 기준)**
+
+| 지표 | 1차 (Baseline) | 2차 (커넥션 풀) | 3차 (Redis 추가) | 4차 (인덱스 추가) | 최종 개선율 (1차 대비) |
+| :--- |:--------------|:-----------| :--- | :--- |:---------------|
+| **에러 수** | 53 건          | 0 건        | 0 건 | **0 건** | **100% 감소**    |
+| **p95 응답 시간**| 29.46 s       | 121.70 ms  | 79.17 ms | **75.48 ms** | **99.7% 감소**   |
+| **RPS (평균)*** | ~9.7 (불안정)    | 33.7       | 34.2 | **34.1** | **252% 증가**    |
+*1차 테스트의 RPS는 시스템 장애로 인해 대시보드 평균(27.9)이 왜곡되어, 실제 처리량(총 요청 수/시간)을 기준으로 계산함.
+
 
 ### **3.2 결론**
 
-초기 테스트를 통해 **30 VUs** 수준에서 DB 병목 현상이 발생하는 시스템의 한계를 명확히 식별했습니다.
+초기 테스트에서는 40 VUs 부하 시 p95 응답 시간이 29.46초에 달해 사실상 서비스 불능 상태였습니다.
+특히, RPS는 요청 대기 및 끊김 현상으로 인해 27.9 수준에서 불안정하게 측정되었습니다.
 
-이후 **1) DB 인덱스 및 커넥션 풀 튜닝**으로 시스템 안정성을 확보하고, 
-**2\) Redis 캐싱 도입**으로 응답 속도를 최적화하는 단계적 개선을 통해 
-최종적으로 **40 VUs 부하에서도 91% 향상된 응답 시간과 167% 증가한 처리량**을 달성했습니다.
+이후 **DB 커넥션 풀 튜닝 → Redis 캐싱 → DB 인덱스 추가**라는 단계적 최적화를 통해:
+- **에러율 완전 제거 (53건 → 0건, 100% 감소)**
+- **p95 응답 시간 대폭 개선 (29.46s → 75.48ms, 99.7% 단축)**
+- **RPS 안정화 및 성능 향상 (9.7 → 34.1, 252% 증가)**
 
-이를 통해 데이터에 기반한 병목 분석과 체계적인 성능 튜닝의 중요성을 성공적으로 증명했습니다.
+라는 결과를 얻었습니다.
+
+최종적으로, 초기에는 동시 사용자 40명 수준의 부하조차 감당하지 못하던 서비스가 단계적 최적화를 거쳐 
+안정적으로 처리 가능한 구조로 개선되었음을 검증했습니다.
 
 ### **3.3 추가 논의: 로컬 테스트 환경의 중요성**
 이번 테스트 과정에서 연속적인 부하 테스트 실행 시 로컬 머신의 자원 과부하로 인해 측정 결과의 신뢰도가 저하되는 문제를 확인하였습니다. 
