docs: Update 8.주문 생성 구현 회고 수정

--- a/docs/report/8.주문 생성 구현 회고.md
+++ b/docs/report/8.주문 생성 구현 회고.md
@@ -51,7 +51,7 @@ HikariPool-1 - Connection is not available, request timed out...
   테스트 환경에서는 동시 실행 스레드 수를 커넥션 풀 크기보다 작게 제한하거나, 커넥션 풀 크기를 늘려 안정성을 확보한다. 단위 테스트에서는 이벤트 리스너와 분산락을 Mock으로 처리하여 DB 커넥션 점유를 최소화한다.
 * **장기적 아키텍처 제안**
     * **모놀리식 환경**: 핵심적인 데이터 정합성이 요구되는 주문-재고 차감과 같은 흐름은 **동기 호출 기반의 사가 패턴**을 유지하는 것이 더 합리적이다. 알림, 로깅 등 비핵심 로직만 이벤트 리스너를 통해 비동기로 분리하는 것을 추천한다.
-    * **MSA 환경**: **Kafka와 같은 메시지 브로커**를 도입하여 서비스 간의 경계를 물리적으로 분리해야 한다. 이를 통해 각 서비스는 독립적인 데이터베이스와 자원을 갖게 되므로, 모놀리식 환경에서 발생했던 자원 경쟁 문제가 완화된다.
+    * **MSA 환경**: 실제 MSA환경을 도입하여 서비스 간의 경계를 물리적으로 분리해야 한다. 이를 통해 각 서비스는 독립적인 데이터베이스와 자원을 갖게 되므로, 모놀리식 환경에서 발생했던 자원 경쟁 문제가 완화된다.
 
 ### **5. 결론**
 
