docs: 주문 생성 문서에 회고 링크 추가

--- a/docs/report/4.주문 생성.md
+++ b/docs/report/4.주문 생성.md
@@ -84,6 +84,10 @@ StockService-->>OrderService: 실패 이벤트(보상 트랜잭션)
   - 최종 일관성: 데이터가 일관성을 갖추기까지 짧은 지연이 발생할 수 있습니다.
   - 디버깅: 전체 트랜잭션 흐름을 추적하기 어려워 분산 추적 시스템 도입이 권장됩니다.
 
+> **추가 참고:**  
+> 설계 이후 실제 구현 및 성능 검증 과정에서 발견된 문제점과 개선 사항은  
+> [주문 생성 회고](./8.주문%20생성%20구현%20회고.md)에서 자세히 다루었습니다.
+
 ## 5. 결론
 코레오그래피 사가 패턴은 분산 환경에서의 트랜잭션 처리 복잡도를 증가시키는 대신,  
 서비스 간 결합도를 낮추고 시스템 전체의 유연성과 확장성을 크게 향상시키는 효과적인 아키텍처 전략입니다.
